testsets/val/ref_stderr/test-val.stderr
llc: error: llc: testsets/val/ref_llvm/test-val.ll:12:16: error: expected type
@_x_4 = global i0 0
               ^
